benifits images issue on smaller screens fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,15 +152,26 @@ footer h2 {
 
 @media screen and (max-width:800px){
 
-.content{
-    display: block;
-    width: auto;
-    margin-right: 20px;
+    .content{
+        display: block;
+        width: auto;
+        margin-right: 20px;
+    }
+
+    .benefits{
+        display: block;
+        width: auto;
+        margin-left: 20px;
+    }
+
 }
 
-.benefits{
-    display: block;
-    width: auto;
-    margin-left: 20px;
-}
+@media screen and (max-width:480px){
+    .content img{
+        float: none;
+        width: 100%;
+        margin: 0;
+        
+        
+    }
 }
